--- a/views/authentication/static.handlebars
+++ b/views/authentication/static.handlebars
@@ -1,6 +1,12 @@
+<!-- Header Section -->
 <header>
-    <h1>Login Screen</h1>
+    <div class="header-container">
+        <a href="/" class="webify"><img src="/public/img/Spotify_Icon_RGB_Green.png" height="65" align="right">Webify</a>
+        <div class="header-right">
+            <a href="/login" class="spotify-authentication">Click Here To Login Or Signup!</a>
+        </div>
+    </div>
 </header>
-<main>
-    <a href="/login" class="btn btn-primary">Log in with Spotify</a>
-</main>
+<div class="paragraph-container">
+    <h1>Find and Share great Music</h1>
+</div>
