--- a/public/main.css
+++ b/public/main.css
@@ -1,37 +1,68 @@
-body {
-    background: #dedede;
-    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
-    max-width: 75%;
-    margin: auto;
+body { 
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url("/public/img/wallpaper1.jpg");
+    background-repeat: no-repeat;
+  }
+
+img {
+    padding-left: 10px;
 }
 
-h1 {
-    text-shadow: 2px 2px 10px black;  
-}
+.header-container {
+    overflow: hidden;
+    padding: 20px 100px;
+  }
 
-button{
-    font-size: 15px;
-    background-color: white;
-    border: 2px solid black;
-    color:black;
-    text-align:center;
-    position: relative;
-    bottom: 5px;
-    left: 5px;
-}
-
-button:hover{
-    background-color: black;
+.header-container a {
+    float: left;
     color: white;
+    text-align: center;
+    padding: 30px;
+    text-decoration: none;
+    font-size: 40px; 
+    line-height: 45px;
+    border-radius: 4px;
 }
 
-a {
-    font-size: 16pt;
-}
-a:visited{
-    color:black;
+.header-container a.webify {
+    font-size: 80px;
+    font-weight: bold;
 }
 
-a:hover {
-    color: #42c5f4
+.header-right {
+    float: right;
+
+}
+
+.paragraph-container {
+    color: white;
+    float: left;
+    font-size: 22px;
+    font-style: italic;
+    padding-top: 120px;
+    padding-left: 150px;
+}
+
+.paragraph-container h1 {
+    overflow: hidden;
+    border-right: .10em solid green; 
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .10em;
+    animation: 
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+}
+  
+  /* The typing effect */
+@keyframes typing {
+    from { width: 0% }
+    to { width: 100% }
+}
+  
+  /* The typewriter cursor effect */
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: green; }
 }
