--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,4 @@
-body { 
+body.openingPage { 
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("/public/img/wallpaper1.jpg");
