--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/public/main.css">
     <title>Authenticator</title>
 </head>
-<body>
+<body class={{renderClass}}>
     {{{body}}}
 </body>
 </html>
