--- a/views/authentication/static.handlebars
+++ b/views/authentication/static.handlebars
@@ -7,6 +7,7 @@
         </div>
     </div>
 </header>
+<!-- End of header -->
 <div class="paragraph-container">
     <h1>Find and Share great Music</h1>
 </div>
