--- a/public/main.css
+++ b/public/main.css
@@ -1,12 +1,22 @@
 body{ 
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("/public/img/wallpaper1.jpg");
-    background-repeat: no-repeat;
 }
 
 img {
     padding-left: 10px;
+}
+
+.openPageCointainer {
+    position:fixed;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/public/img/wallpaper1.jpg");
+    background-repeat: no-repeat;
 }
 
 .header-container {
