--- a/views/authentication/static.handlebars
+++ b/views/authentication/static.handlebars
@@ -1,13 +1,15 @@
-<!-- Header Section -->
-<header>
-    <div class="header-container">
-        <a href="/" class="webify"><img src="/public/img/Spotify_Icon_RGB_Green.png" height="65" align="right">Webify</a>
-        <div class="header-right">
-            <a href="/login" class="spotify-authentication">Click Here To Login Or Signup!</a>
+<div class="openPageCointainer">
+    <!-- Header Section -->
+    <header>
+        <div class="header-container">
+            <a href="/" class="webify"><img src="/public/img/Spotify_Icon_RGB_Green.png" height="65" align="right">Webify</a>
+            <div class="header-right">
+                <a href="/login" class="spotify-authentication">Click Here To Login Or Signup!</a>
+            </div>
         </div>
+    </header>
+    <!-- End of header -->
+    <div class="paragraph-container">
+        <h1>Find and Share great Music</h1>
     </div>
-</header>
-<!-- End of header -->
-<div class="paragraph-container">
-    <h1>Find and Share great Music</h1>
 </div>
