--- a/views/authentication/static.handlebars
+++ b/views/authentication/static.handlebars
@@ -1,4 +1,4 @@
-<div class="openPageCointainer">
+<div class="openPageContainer">
     <!-- Header Section -->
     <header>
         <div class="header-container">
