--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -1,6 +1,13 @@
-<header>
-    <h1>You are logged in!</h1>
-</header>
-<main>
-    <p>Just checking if you are logged in!</p>
-</main>
+<div class="logged-in-page">
+    <header>
+        <div class="header-logged-container">
+            <div class="menu">
+                <div class="nav-bar">
+                    <ul>
+                        <li><a href="/logged"><img src="/public/img/Spotify_Icon_RGB_Green.png" align="right" height="40">Home</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+</div>
