--- a/views/authentication/static.handlebars
+++ b/views/authentication/static.handlebars
@@ -2,7 +2,7 @@
     <!-- Header Section -->
     <header>
         <div class="header-container">
-            <a href="/" class="webify"><img src="/public/img/Spotify_Icon_RGB_Green.png" height="65" align="right">Webify</a>
+            <a href="/" class="webify"><img src="/public/img/Spotify_Icon_RGB_Green.png" height="65" align="right" class="image-first">Webify</a>
             <div class="header-right">
                 <a href="/login" class="spotify-authentication">Click Here To Login Or Signup!</a>
             </div>
