--- a/public/main.css
+++ b/public/main.css
@@ -94,7 +94,7 @@ Logged in Page styling
 }
 
 .header-logged-container {
-    padding-top: 15px;
+    padding-top: 10px;
     background: #000000;
     background: -webkit-linear-gradient(to right, #000000, #087508); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #000000, #087508)
@@ -103,11 +103,12 @@ Logged in Page styling
 .menu ul li {
 	display: inline-block;
 	margin: 0;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
     margin-left: 300px;
 	font-family: 'Raleway', sans-serif;
 	font-size: 30px;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .menu ul { 
@@ -117,5 +118,4 @@ Logged in Page styling
 .menu img { 
     display: inline-block;
     padding-left: 5px;
-    padding-top: -5px; 
 }
