--- a/public/main.css
+++ b/public/main.css
@@ -91,31 +91,76 @@ Logged in Page styling
 
 .logged-in-page {
     font-size: 30px;
+    position:fixed;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
 }
 
 .header-logged-container {
     padding-top: 10px;
+    padding-bottom: 10px;
     background: #000000;
     background: -webkit-linear-gradient(to right, #000000, #087508); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #000000, #087508)
 }
 
+.menu{
+    height: 100%;
+}
+
 .menu ul li {
 	display: inline-block;
 	margin: 0;
-	padding-bottom: 10px;
-    margin-left: 300px;
+	padding-bottom: 15px;
 	font-family: 'Raleway', sans-serif;
-	font-size: 30px;
-    text-transform: uppercase;
+	font-size: 35px;
+}
+
+.nav-bar {
+    margin: 0;
+    margin-left: 300px;
+    float: left;
+}
+
+.middle-nav-bar {
+    overflow: hidden; 
+}
+
+.menu ul li a {
     text-decoration: none;
+    color: white;
+    float: left;
+    padding-left: 5px;
 }
 
 .menu ul { 
     margin: 0; 
-    padding: 0; 
+    padding: 0;
 }
-.menu img { 
+.nav-bar img { 
     display: inline-block;
-    padding-left: 5px;
+    padding-right: 7px;
+    color: red;
 }
+
+.middle-nav-bar{
+    padding-left: 900px;
+}
+
+.middle-nav-bar img{
+    display: inline-block;
+    padding-right: 7px;
+}
+
+.middle-nav-bar a {
+    padding-top: 20px;
+    text-decoration: none;
+    color: white;
+    overflow: none;
+}
+
