--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -4,9 +4,13 @@
             <div class="menu">
                 <div class="nav-bar">
                     <ul>
-                        <li><a href="/logged"><img src="/public/img/Spotify_Icon_RGB_Green.png" align="right" height="40">Home</a></li>
+                        <li><a href="/logged"><img src="/public/img/if_Asset_23_2342209.png" align="left" height="35">Home</a></li>
+                        <li><a href="/logged"><img src="/public/img/if_Asset_20_2342730.png" align="left" height="35">Browse</a></li>
                     </ul>
                 </div>
+                <div class="middle-nav-bar">
+                    <a href="/logged"><img src="/public/img/if_Asset_20_2342730.png" align="left" height="35">Log Out</a>
+                </div>           
             </div>
         </div>
     </header>
