--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -1,17 +1,18 @@
-<div class="logged-in-page">
-    <header>
-        <div class="header-logged-container">
-            <div class="menu">
-                <div class="nav-bar">
-                    <ul>
-                        <li><a href="/logged"><img src="/public/img/if_Asset_23_2342209.png" align="left" height="35">Home</a></li>
-                        <li><a href="/logged"><img src="/public/img/if_Asset_20_2342730.png" align="left" height="35">Browse</a></li>
-                    </ul>
-                </div>
-                <div class="middle-nav-bar">
-                    <a href="/logged"><img src="/public/img/if_Asset_20_2342730.png" align="left" height="35">Log Out</a>
-                </div>           
-            </div>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="header-logged-container">
+    <div class="container">
+        <a class= "navbar-brand" href="#"><img src="/public/img/Spotify_Icon_RGB_Green.png" height="45">Webify</a>
+        <div class="navbar-collapse collapse" id="collapsedNavbar">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"><img src="/public/img/if_Asset_23_2342209.png" height="35">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><img src="/public/img/if_Asset_20_2342730.png" height="35">Browse</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><img src="/public/img/if_Asset_23_2342209.png" height="35">Logout</a>
+                </li>
+            </ul>
         </div>
-    </header>
-</div>
+    </div>
+</nav>
