--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -1,6 +1,9 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="header-logged-container">
     <div class="container">
         <a class= "navbar-brand" href="#"><img src="/public/img/Spotify_Icon_RGB_Green.png" height="45">Webify</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsedNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="navbar-collapse collapse" id="collapsedNavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
