--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -1,5 +1,5 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="header-logged-container">
-    <div class="container">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark " id="header-logged-container">
+    <div class="container-fluid">
         <a class= "navbar-brand" href="#"><img src="/public/img/Spotify_Icon_RGB_Green.png" height="45">Webify</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsedNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -9,8 +9,14 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#"><img src="/public/img/if_Asset_23_2342209.png" height="35">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="/public/img/if_Asset_20_2342730.png" height="35">Browse</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"><img src="/public/img/if_Asset_20_2342730.png" height="35">Browse</a>
+                    <div class="dropdown-menu" data-target="#navbarDropdown" id="header-logged-container">
+                        <a class="dropdown-item" href="#">United States Top 50</a>
+                        <a class="dropdown-item" href="#">Global Top 50</a>
+                        <a class="dropdown-item" href="#">Global Viral 50</a>
+                        <a class="dropdown-item" href="#">United States Viral 50</a>
+                    </div>                    
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><img src="/public/img/if_Asset_23_2342209.png" height="35">Logout</a>
@@ -19,3 +25,23 @@
         </div>
     </div>
 </nav>
+<div class="container margin-move">
+    <div class="row flex-xl-nowrap">
+        <div class="col">
+            <p>eAKRUM SMELLS</p>
+        </div>        
+    </div>
+    <div class="row flex-xl-nowrap">
+        <div class="col">
+            <p>eAKRUM SMELLS</p>
+        </div>        
+    </div>
+    <div class="row flex-xl-nowrap">
+        <div class="col">
+            <p>eAKRUM SMELLS</p>
+        </div>        
+    </div>
+</div>
+<div class="container">
+  <p>eAKRUM SMELLS</p>
+</div>
