--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,4 @@
 body{ 
-    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -94,24 +93,28 @@ Logged in Page styling
     background: linear-gradient(to right, #000000, #087508)
 }
 
-.container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-
-}
 
 .navbar-brand {
     font-size: 30px;
+
 }
 
-.container img {
+.container-fluid img {
     padding-right: 5px;
 }
 
 .navbar-collapse {
     font-size: 25px;
 }
+
+.margin-move {
+    padding-top: 40px;
+}
+
+.dropdown-menu a {
+    color: white;
+}
+
 
 
 
