--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,7 @@
 body{ 
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url("/public/img/wallpaper2.jpg");
+    background-repeat: no-repeat;
 }
 
 /*
