--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -26,22 +26,12 @@
     </div>
 </nav>
 <div class="container margin-move">
-    <div class="row flex-xl-nowrap">
-        <div class="col">
-            <p>eAKRUM SMELLS</p>
-        </div>        
+    <div class="row">
+        <div class="col-3">
+            <img id="profileImage" src="/public/img/no-profile-picture-icon.jpg" height="200" width="200" class="rounded-circle">
+        </div>
+        <div class="col-8">
+            <p>eAKRUM SMELLS LIKE ASSS CHEEKS IN THIS SOUNDSSS</p>
+        </div>            
     </div>
-    <div class="row flex-xl-nowrap">
-        <div class="col">
-            <p>eAKRUM SMELLS</p>
-        </div>        
-    </div>
-    <div class="row flex-xl-nowrap">
-        <div class="col">
-            <p>eAKRUM SMELLS</p>
-        </div>        
-    </div>
-</div>
-<div class="container">
-  <p>eAKRUM SMELLS</p>
-</div>
+
