--- a/public/main.css
+++ b/public/main.css
@@ -1,6 +1,6 @@
 body{ 
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("/public/img/wallpaper2.jpg");
+    background-image: url("/public/img/wallpaper10.jpg");
     background-repeat: no-repeat;
 }
 
@@ -115,6 +115,16 @@ Logged in Page styling
 
 .dropdown-menu a {
     color: white;
+}
+
+
+.col-3 p {
+    font-size: 20px;
+    color: white;
+}
+
+u {
+    color: green;
 }
 
 
