--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -29,6 +29,9 @@
     <div class="row">
         <div class="col-3">
             <img id="profileImage" src="/public/img/no-profile-picture-icon.jpg" height="200" width="200" class="rounded-circle">
+            <p class="text-left" id="Name"><u>Name</u>: </p>
+            <p class="text-left" id="Followers"><u>Followers</u>:</p>
+            <p class="text-left" id="Followers"><u>Recently Played Song</u>:</p>
         </div>
         <div class="col-8">
             <p>eAKRUM SMELLS LIKE ASSS CHEEKS IN THIS SOUNDSSS</p>
