--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -12,7 +12,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"><img src="/public/img/if_Asset_20_2342730.png" height="35">Browse</a>
                     <div class="dropdown-menu" data-target="#navbarDropdown" id="header-logged-container">
-                        <a class="dropdown-item" href="#">United States Top 50</a>
+                        <a class="dropdown-item" href="/UsTop50">United States Top 50</a>
                         <a class="dropdown-item" href="#">Global Top 50</a>
                         <a class="dropdown-item" href="#">Global Viral 50</a>
                         <a class="dropdown-item" href="#">United States Viral 50</a>
