--- a/public/main.css
+++ b/public/main.css
@@ -127,6 +127,16 @@ u {
     color: green;
 }
 
+.top-buffer { 
+    margin-top:40px; 
+}
+
+.margin-playlists {
+    padding-top: 90px;
+    background-color: black;
+    padding-left: 200px;
+}
+
 
 
 
