--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -34,7 +34,7 @@
             <p class="text-left" id="Followers"><u>Recently Played Song</u>:</p>
         </div>
         <div class="col-8">
-            <p>eAKRUM SMELLS LIKE ASSS CHEEKS IN THIS SOUNDSSS</p>
+           <iframe src="https://open.spotify.com/embed/track/4XOuT4tFDIYEfh61ra53oQ" width="300" height="75" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>            
     </div>
-
+</div>
