--- a/views/authentication/playlists.handlebars
+++ b/views/authentication/playlists.handlebars
@@ -28,54 +28,14 @@
 <div class="container-fluid margin-playlists">
     <div class="row">
         <div class="col-2">
-            <div class="card">
+            <div class="card border-success text-white" style="background-color: black">
                 <img class="card-img-top" src="/public/img/wallpaper1.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <h3 class="card-text">Some quick</h3>
                 </div>
             </div>
-            <iframe src="https://open.spotify.com/embed/track/4XOuT4tFDIYEfh61ra53oQ" width="260" height="75" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <img class="card-img-top" src="/public/img/wallpaper1.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h3 class="card-text">Some quick</h3>
-                </div>
-            </div>
-            <iframe src="https://open.spotify.com/embed/track/4XOuT4tFDIYEfh61ra53oQ" width="260" height="75" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <img class="card-img-top" src="/public/img/wallpaper1.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h3 class="card-text">Some quick</h3>
-                </div>
-            </div>
-            <iframe src="https://open.spotify.com/embed/track/4XOuT4tFDIYEfh61ra53oQ" width="260" height="75" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <img class="card-img-top" src="/public/img/wallpaper1.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h3 class="card-text">Some quick</h3>
-                </div>
-            </div>
-            <iframe src="https://open.spotify.com/embed/track/4XOuT4tFDIYEfh61ra53oQ" width="260" height="75" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <img class="card-img-top" src="/public/img/wallpaper1.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h3 class="card-text">Some quick</h3>
-                </div>
-            </div>
-            <iframe src="https://open.spotify.com/embed/track/4XOuT4tFDIYEfh61ra53oQ" width="260" height="75" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe src="https://open.spotify.com/embed/track/4XOuT4tFDIYEfh61ra53oQ" width="259" height="75" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
     </div>    
 </div>
