--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -27,7 +27,7 @@
 </nav>
 <div class="container margin-move">
     <div class="row">
-        <div class="col-3">
+        <div class="col-lg-3 col-sm-6">
             <img id="profileImage" src={{profilePicture}} height="200" width="200" class="rounded-circle">
             {{#if Name}}
                 <p class="text-left" id="Name"><u>Name</u>:{{Name}}</p>
@@ -38,7 +38,13 @@
             <p class="text-left" ><u>Recently Shared Song</u>:</p>
         </div>
         <div class="col-8">
-           <p>testing here</p>
+           <div class="container margin-down">
+                <div class="row">
+                    <div class="col">
+                        <p>testing to see if this works or not and if i can trully write what i want to say without having an error</p>
+                    </div>
+                </div>
+           </div>
         </div>            
     </div>
 </div>
