updated logged page handlebars with data parsing for main song feed

--- a/public/main.css
+++ b/public/main.css
@@ -140,6 +140,10 @@ u {
     border-width: 5px;
 }
 
+.user-comment {
+    background-color: #000000;
+}
+
 /*
 ==============================================
 Playlist styling
@@ -157,7 +161,7 @@ Playlist styling
     padding-left: 200px;
 }
 
-iframe {
+.margin-playlists iframe {
     border-left: 0.08em solid #28a745;
     border-right: 0.08em solid #28a745;
     border-bottom: 0.08em solid #28a745;
