--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -39,11 +39,20 @@
         </div>
         <div class="col-8">
            <div class="container margin-down">
-                <div class="row">
-                    <div class="col">
-                        <p>testing to see if this works or not and if i can trully write what i want to say without having an error</p>
+               {{#each commentData}}
+                    <div class="row border border-success user-comment">
+                        <div class="col-2">
+                            <img src="/public/img/no-profile-picture-icon.jpg" height="85" width="85" class="rounded-circle">
+                        </div>
+                        <div class="col-lg-9 col-sm-6">
+                            <h5 style="color: white">{{User}}</h5>
+                            <p style="color: white">{{Shared_Commment}}</p>
+                            <p style="color: white"><u>Category:</u>{{Category}}</p>
+                            <iframe src={{Stream_url}} width="400" height="75" frameborder="0" allowtransparency="true" allow="encrypted-media" id="song0"></iframe>
+                            <p style="color: white"> This is comment button to make a popup that views comments</p>
+                        </div>
                     </div>
-                </div>
+                {{/each}}
            </div>
         </div>            
     </div>
