--- a/views/authentication/logged.handlebars
+++ b/views/authentication/logged.handlebars
@@ -41,10 +41,10 @@
            <div class="container margin-down">
                {{#each commentData}}
                     <div class="row border border-success user-comment">
-                        <div class="col-2">
+                        <div class="col-2 top-padding">
                             <img src="/public/img/no-profile-picture-icon.jpg" height="85" width="85" class="rounded-circle">
                         </div>
-                        <div class="col-lg-9 col-sm-6">
+                        <div class="col-lg-9 col-sm-6 top-padding">
                             <h5 style="color: white">{{User}}</h5>
                             <p style="color: white">{{Shared_Commment}}</p>
                             <p style="color: white"><u>Category:</u>{{Category}}</p>
